cp03/sc04_03.tex: 录入完成: (1)(2)

--- a/vol1/cp03/sc04_03.tex
+++ b/vol1/cp03/sc04_03.tex
@@ -1,2 +1,51 @@
 \subsection{介质对晶体生长的影响}
+% OCR Product
+% To be fixed
+实际晶体都是在一定的介质环境中生长的，因此介质必然对晶体（外形和完整性）发生影响，开展这方面的研究，不仅对于培养优质单晶，而且对于探讨实际晶体的形成问题都具有重要的意义，介质对从溶液中生长晶体的影响主要包括以下几个因素：杂质、溶液中氢离子浓度（pH值）、温度、过饱和度和介质运动等。
 
+\paragraph{(1)杂质}通常把与结晶物质无关的少量外来物质称为杂质。杂质在结晶过程中一般是难以避免的。广义的杂质还应该包括溶剂本身，从这个意义上来说，杂质是不能消除的（其含量有时甚至是很大的），因为它本身就是外介质。
+
+杂质对晶体生长的影响是多方面的，研究杂质效应不仅有助于控制结晶过程和单晶的性质，而且在晶体生长理论研究上也有重要的作用，因为杂质影响的机制常与晶体生长动力学的研究紧密联系在一起的。
+
+杂质可以影响溶解度和溶液的性质，例如在生长某些晶体时，常在溶剂中加入一定量（百分之几）的辅助剂或使用混合溶剂，以改变溶解度或溶液的粘度，使有利于晶体的生长（表3.10）。
+
+（表3.10）
+
+杂质也会显著地改变晶体的结晶习性（晶癖），Buckley曾用许多篇幅对此作了专门叙述，在工业结晶中也常应用杂质这一效应，表3.11列出了其中的一些典型例子。
+
+（表3.11）
+
+杂质对晶体质量也有明显的影响。在多数情况下，杂质使晶体的完整性降低，性能变坏，但也存在一些少量杂质离子能改善晶体生长质量，其侧子见表3.12。有时为了改善晶体某一方面的性能，还需加入一些杂质（掺质）。例如在TGS晶体中掺入$\alpha$丙氨酸以防止退极化。
+
+（表3.12）
+
+杂质影响晶体生长有以下三种方式：
+\begin{enumerate}[(i)]\itemsep -0.5ex
+\item 进入晶体；
+\item 选样性吸附在一定的晶面上；
+\item 改变晶面对介质的表面能，
+\end{enumerate}
+
+杂质进入晶体的机制井不十分清楚，一般来说，由于结晶作用的专一性，生长中的晶体对外来杂质有排斥作用。但有时晶体表面也可以键合杂质质点，特别是它与组成晶体的质点在晶体构造中较为相似时，比较容易均匀地进人晶体，相似性愈大，进入晶体就愈容易，例如在生长DKDP晶体时，H就可以进入D的位置，形成均匀的$\rm K(D_xH_{1-x})_2PO_4$混晶。在掺$\alpha$丙氨酸的TGS晶体（称ATGS）中，$\alpha$丙氨酸之所以能进入TGS晶格中，主要是由于$\alpha$丙氨酸分子(！！！)和甘氨酸分子(！！！)在结构上的相似性。杂质的这种均匀进入通常会对晶体的性质发生影响。当然，这种进入一般是有一定限度的，超过这一限度常会引起晶体构造的不稳定。有时杂质（包括溶剂）也会不均匀地进入晶体，造成包裹物，这主要是由外因引起，如过饱和度过大，溶液搅拌不均匀等。
+
+由于晶体的各向异性，杂质在晶体的不同晶面上经常发生选择性吸附。这种吸附常使某些晶面的生长受到阻碍，因而改变了各晶面的相对生长速度。在杂质改变晶癖的例子中有不少是由这种原因造成的。选择性吸附还普遍具有饱和性，即当溶液中杂质含量超过一定浓度后，它对生长的遏制作用不再随杂质浓度的增大而增长。选择性吸附对晶体的影响方式以进入晶体为主。如在含有$\rm CuCO_3$的溶液中生长KTN晶体时，$\rm Cu^{2+}$只吸附在\{001\}晶面上，阻碍其生长，但对[001]晶带上的晶面却无影响，结果使KTN晶体$Z$向变短，甚至呈板状。\{001\}表层呈深蓝色，说明$\rm Cu^{2+}$已进入了<001>的生长锥。
+
+必须指出，同一种晶面对不同杂质离子或同一种离子对不同晶面选择性吸附影响的程度是很不相同的。例如三价金属离子$\rm Cr^{3+}$，$\rm Fe^{3+}$，$\rm Al^{3+}$很容易在KDP型晶体的柱面上发生选择性吸附，使柱面楔化（图3.37），但其楔化能力却不一样，在相同的杂质浓度下，按$\rm Cr^{3+}>Fe^{3+}>Al^{3+}$递降。这可能与相应水合离子$\rm M(H_2O)_6^{3+}$的稳定性有关，因其稳定性递减次序恰好是$\rm Cr(H_2O)_6^{3+}>Fe(H_2O)_6^{3+}>Al(H_2O)_6^{3+}$。微量的$\rm Cr^{3+}$很容易进入晶体柱面的生长扇形，使此部分呈绿色［图3.37(c)］。
+
+三价金属离子在KDP型晶体柱面上发生选择性吸附，常常使晶体柱面楔化，光学均匀性降低，这固然是其有害的一面，但也有其可利用的一面。在培养大块晶体时，人们按预定的要求 用规定尺寸横截面的种子，不希望横截面再扩大，而在纯度较高的溶液中生长此类晶体横截面会扩大，有时甚至达到无法控制的程度，使光轴方向生长达不到要求的尺寸，为此必须抑制晶体柱面生长，加入一定量有选择性吸附能力的三价金属离子可以实现上述目标。有趣的是，加入三价金属离子后，溶液的准稳区扩大，稳定性大大提高，而柱面上产生的楔化度可通过加大过饱和度得到补偿（图3.31），使KDP型晶体在$Z$向上的生长速度大大提高。
+
+（图3.31）
+
+杂质改变了晶面对介质的表面能，从晶体生长的分子动力学理论来看，这可以看成时改变各种生长过程的能量。如果杂质不进入晶体，只是在溶液中和溶质相互作用，那么只能均匀地改变所有质点的结合能，表现为杂质对溶解度和晶体生长速度的影响。如果杂质进入晶体，则晶格场受到局部破坏。杂质在不同晶面上进入的情况是不一样的，对各个晶面上质点结合能影响的程度也是不相同的，其结果就是改变了各晶面的相对生长速度。
+
+综上所述，杂质的影响包括晶体学、动力学和热力学等方面的效应，影响的主要方式是进入晶体。
+
+
+\paragraph{(2)氢离子浓度（pH）}在水溶液中存在着大量的$\rm H^+$和$\rm OH^-$，溶液中的氢离子浓度对晶体生长的影响是很显著的。例如提高溶液的pH值会促使KDP型晶体柱面扩展，降低pH值使得LSH和TGS晶体发育较为匀称。如果溶液pH值不合适，即便是其它生长条件合适，也长不出所需尺寸的好晶体。pH影响也是相当复杂的，一般可归纳为以下几种方式：
+\begin{enumerate}[(i)]\itemsep -0.5ex
+\item pH影响溶解度，使溶液中离子平衡发生变化。
+\item pH改变杂质的活性，即改变杂质络合或水合状态，使杂质敏化或钝化。pH的作用也可能改变晶面的吸附能力，因pH对后者有较大的影响。
+\item pH直接影响晶体生长，通过改变各晶面的相对生长速度，引起晶体生长习性的变化。例如25摄氏度时，在$\rm pH=3.8$的溶液中，ADP晶体在$X$方向上生长速度为0，晶体沿$Z$方向伸长。当$\rm pH=5.2$时，沿$Z$向生长速度增长不多，但$X$向生长速度却有明显的增加，晶体长成较短的棱柱体（图3.32）。Mullin把$\rm H^+$也看成和$\rm M^{3+}$一样的杂质离子来解释pH的影响机制：溶液中$\rm H^+$以水合离子$\rm H_3(H_2O)_3^+$存在，它在ADP柱面附近表现出稀释效应，阻碍溶质向晶面上扩散，因而遏制了该面生长。当pH升高时，氢离子浓度减小，阻碍作用减弱，柱面生长速度就增加了。
+
+
+\end{enumerate}
