--- a/vol1/cp03/sc04_03.tex
+++ b/vol1/cp03/sc04_03.tex
@@ -47,5 +47,23 @@
 \item pH改变杂质的活性，即改变杂质络合或水合状态，使杂质敏化或钝化。pH的作用也可能改变晶面的吸附能力，因pH对后者有较大的影响。
 \item pH直接影响晶体生长，通过改变各晶面的相对生长速度，引起晶体生长习性的变化。例如25摄氏度时，在$\rm pH=3.8$的溶液中，ADP晶体在$X$方向上生长速度为0，晶体沿$Z$方向伸长。当$\rm pH=5.2$时，沿$Z$向生长速度增长不多，但$X$向生长速度却有明显的增加，晶体长成较短的棱柱体（图3.32）。Mullin把$\rm H^+$也看成和$\rm M^{3+}$一样的杂质离子来解释pH的影响机制：溶液中$\rm H^+$以水合离子$\rm H_3(H_2O)_3^+$存在，它在ADP柱面附近表现出稀释效应，阻碍溶质向晶面上扩散，因而遏制了该面生长。当pH升高时，氢离子浓度减小，阻碍作用减弱，柱面生长速度就增加了。
 
+\paragraph{(3)温度}生长温度对晶体的习性和质量都有影响。图3.33示出过饱和度相同、但生长温度不同的$\rm MgSO_4\cdot 7H_2O$晶体的习性变化。因此，可以利用晶体生长习性随温度的变化，选择合适的生长温度以获得所需要的晶癖。
+
+温度本身的影响可以认为是改变晶体生长各个过程的激活能。晶体生长过程很少是纯表面反应或是扩散过程。一般在较低温度下，结晶过程主要由表面反应这一步控制。当温度升高时，生长速度加快，扩散就逐渐成为控制结晶过程的主要步骤了。在较高的温度下生长的晶体，由于结晶质点排斥外来杂质能力的增强，其长出的晶体质量一般要比在较低温度下生长的好些。
+
+（图3.32）
+（图3.33）
+
+如果从结晶质点和介质的相互作用这一观点来研究实际晶体的形成过程时，可以把温度的影响看成是溶剂浓度的变化的影响（如果把溶剂看成杂质，也可以归结于杂质变化的影响）
+
+
+\paragraph{(4)过饱和度和介质运动}过饱和度是结晶的驱动力，由于不同过饱和度会产生不同的生长机制，过饱和度对晶体生长速度、质量和晶体外形影响都很大。晶体在低过饱和度下生长时，速度较慢，晶面发展比较充分，一些高指数的次要晶面容易出露，ADP、KDP等晶体在过饱和度很低时，也会出现类似于杂质离子所造成的柱面楔化现象（图3.37），随着过饱和度的增加，楔化逐渐减轻到最后消失，经过这样的过程生长的晶体并不产生母液包藏。这种在很低过饱和度下出现的生长现象，可能是由于结晶驱动力过小、扩散到柱面附近的溶质质点无力穿过柱面-锥面交界处的“水分子壁垒”所造成的。用放射自显影术研究铁离子在KDP晶体中的分配的实验结果也表明，适当增加过饱和度（在较小的过饱和度范围内）有助于减少铁离子在柱面上的进入。
+
+控制过饱和度是控制溶液晶体生长速度和质量的关键措施。大的过饱和度有利于晶体的自提纯作用和晶形简化，使晶体光学均匀性变好，而生长速度又快。但大的饱和度容易造成晶面上各部分过饱和度差变大，特别是大晶面，容易出现由于生长速度上的差异造成母液包藏。按照理想完整晶体生长模型，在晶面上晶体生长是一层一层依次推送的，在通过台阶扩展堆砌好一层后再开始新层的生长。晶面上过饱和度的差别破坏了这种生长的顺序性。在质点完成一次排列之前，晶面上过饱和度大的区域（图3.34中的$A, B, C$）又开始了新层的生长，晶体构造的完整性遭到破坏，使外面的介质很易进入晶体。所以晶面上过饱和度的差别是为杂质（广义）进入晶体开路的主要外界因素。
+
+（图3.34）
+
+介质的运动对晶体生长速度和完整性都有显著的作用，这种作用往往又和过饱和度紧密联系在一起。介质运动由自然对流、强迫对流和晶体自身生长引起。对流是质量传输和热量传输的主要形式，它影响晶体生长动力学、杂质俘获、组分均匀性、形态稳定性和成核作用。一般来说，随着对流的增大晶体生长速度也增大，直到以生长动力学机制决定生长速度。在无对流的情况下，过饱和度的分布在晶面中心最低，棱边次之，隅角顶点最高。这种分布在过饱和度增大时更为突出，容易发生界面的不稳定，产生母液包藏。在水溶液晶体快速生长中，要求过饱和度和溶液相对于晶体的流苏都很大，使晶体生长机制进入动力学和扩散同时起作用。晶体正反方向转动可以减弱顺着晶体产生的“尾流”，防止母液包藏。溶液的充分搅拌可使整体溶液浓度和温度分布均匀，这对大晶面的稳定生长和防止大生长体系中的自发成核特别重要。
+
 
 \end{enumerate}
