cp03/sc04_04.tex: 手工完成录入 CONTRIBUTION.md & TODO.md: 更新贡献信息 common/packages.tex: 完善俄语支持

--- a/vol1/cp03/sc04_04.tex
+++ b/vol1/cp03/sc04_04.tex
@@ -1,2 +1,18 @@
 \subsection{水溶液晶体的快速生长}
+晶体从溶液中生长也就是从稀薄环境相中生长。大量的溶剂和少量的杂质使结晶物质向晶体上生长受到重重阻碍。所以溶液晶体生长和熔体晶体生长在速度上存在数量级的差别。KDP型（DKP，DKDP和ADP等）晶体快速生长技术的发展改变了这种状况，大大缩小了这种差别。生长KDP晶体采用传统的降温法，$Z$向生长速度约1mm/d，而用快速生长方法则可达1---2mm/h，提高了一个数量级。快速生长方法的实质，可以说是人们充分利用介质对晶体生长影响的知识在实践中取得成功的一个范例。
 
+晶面法向生长速度可用简单的经验公式$R=\beta\sigma^n$表示，$\beta$是生长动力学系数，$\sigma$是过饱和度，$n$是反映生长机制的常数。从公式中可知，要想提高晶体生长速度可以从两个方面入手：一是提高$\beta$值，二是提高$\sigma$值。
+
+根据{\timesnewroman Такиво}等的研究结果，在一定的过饱和度下，提高溶液流速可以改变晶体的生长机制，实现快速生长。
+
+Cooper等用自己设计的潜入式离心泵，把液流速度与晶体长度之比值$u/l$提高到$\rm 50s^{-1}$，在50---80℃的范围内，用$\rm 18\times 21mm$(101)扇形片作籽晶，获得3---6mm/d的生长速度。在$10\times10\rm mm$的扇形片籽晶上，生长无宏观缺陷的晶体，生长速度达到11---23mm/d。
+
+提高$\sigma$是提高晶体生长速度最重要的途径。前面已详细地讲过生长机制与过饱和度的关系。通过改变过饱和度控制晶体生长机制，使晶体生长既有较高的生长速度，又符合使用要求是可能的。
+
+{\timesnewroman Зайцева}等用传统的降温法，点状籽晶和控制液流速度在30cm/s（生长动力学机制），通过增大过饱和度，使KDP晶体$Z$向生长达50mm/d，柱面生长25---30mm/d。
+
+在快速生长方法中遇到最大的问题是如何防止自发成核和保证晶体完美生长。超细过滤（筛孔直径小于$0.2\rm\mu m$），提高过热温度（高于饱和温度5---10℃）和延长过热时间（2---3d）对防止自发成核有重要作用。但更重要的是严格控制过饱和度和生长速度间的相适应关系，提高原料和溶液的纯度，减少杂质阻碍生长和防止过饱和度积累。防止二次成核是另一个要注意的问题。在高速液流中，已存在于溶液中的晶体，相互碰撞或与容器壁摩擦都会发生二次成核。{\timesnewroman чернов}等从大量的实验事实中发现，二次成核还与生长中的晶体发生开裂有关。开裂产生的晶体碎片成为新的晶核。
+
+用快速生长方法生长出来的晶体，其完整性与通常方法生长出来的无很大的差别。但在生长条件控制方面要求更加严格。晶体在高过饱和度下生长，在晶体表面，特别是在大晶面上浓度空间分数不得不均匀性更易发生，对温度波动也更敏感，造成母液包藏的机会更大。在生长机制上，不仅仅是动力学机制，而且对流-扩散机制也同时起作用，晶体生长趋向于粗糙化，细微裂纹常可在KDP晶体的柱面上看到。晶体开始生长阶段的恢复区，在籽晶与新生长晶体间起着晶格匹配的缓冲作用，快速生长把这个区域缩小，使籽晶上的缺陷更易延伸进新生长的晶体中，此时采用点状籽晶是合适的。快速生长的晶体，其下面性质甚至比常规生长的更优越：KDP(100)生长速度增大时，进入(100)生长扇形的杂志浓度降低，而(101)生长扇形中两种方法杂质浓度变化不大。快速生长晶体中不存在常规生长晶体中常见到的生长层和位错束，也不存在其他折射率不均匀的结构，晶面间的生长扇形界消失，表现出有更好的光学均匀性。
+
+综上所述，水溶液晶体快速生长不仅可以大大缩短生长周期，提高生产效率，降低生产成本，而且使晶体某些性能得到改善。尽管快速生长条件苛刻，控制困难，但只要我们更深入地研究介质对晶体生长影响的动力学，更准确地把握生长条件、生长机制和晶体性质之间的关系，实现按预想要求既快又好地培养出特定需要的晶体是完全可能的。
