--- a/common/packages.tex
+++ b/common/packages.tex
@@ -7,3 +7,4 @@
 \usepackage{enumerate}
 \usepackage{booktabs}
 \setCJKmainfont[BoldFont={方正黑体简体}, ItalicFont={方正报宋_GBK}] {方正书宋_GBK}
+\newfontinstance{\timesnewroman}{Times New Roman} %解决俄文字体问题
