cp03/sc04_05.tex: 手工完成录入

--- a/vol1/cp03/sc04_05.tex
+++ b/vol1/cp03/sc04_05.tex
@@ -1,1 +1,36 @@
 ﻿\subsection{水溶性晶体常见的宏观缺陷}
+水溶性晶体常见的宏观缺陷有下述几种类型。
+
+\paragraph{(1)晶面花纹和母液包藏}水溶性晶体在生长过程中，晶面上经常出现各种类型的花纹（图3.35）。这类缺陷主要由于外部生长条件变化引起，如温度（过饱和度）波动，晶体的不同晶面以及同一晶面上不同部位溶质供应不均匀，造成过饱和度差别过大。这种情况在晶体生长期单向转动或在较大过饱和度下停转，特别是在静止生长时很容易发生。此时，晶面上受到生长涡流洗刷的部分，溶质供应不足，而它和接触新鲜溶液的其他部分过饱和度差别很大。晶面花纹在生长过程中不断发展、加深，最终造成母液包藏，在透明生长的晶体上出现“云层”（图3.36）。在采取措施消除引起这种缺陷的外因后（如降低过饱和度，改善溶液流动情况等），晶体仍能恢复透明生长。有包藏的晶面会引发位错，能量较高，生长速度显著加快。必须指出，晶面花纹有时由溶液中某些杂质引起，一般采取上述措施是无效的，必须对溶液作提纯处理。
+
+保证晶体透明生长使溶液中培养晶体的最低要求。为此，必须避免母液包藏。
+
+\paragraph{(2)外形的不完整性、楔化和寄生生长}晶体在某些条件下，虽然能透明生长，但不能呈现正常的外形，如KDP型晶体在含有三价金属离子（$\rm Cr^{3+}$，$\rm Fe^{3+}$，$\rm Al^{3+}$）的溶液中生长时，柱面逐渐弯曲，$X-Y$截面不断减小，晶体沿生长方向不断变尖（图3.37）；硫酸锂（LSH）晶体在$\text{pH}>7$的溶液中生长时，$Z$向不断缩小，[001]晶带上的晶面逐渐消失，最后长成板状晶体（图3.38）。这些在生长过程中，某些方向不断变小造成晶面弯曲，使晶体成楔形的现象称为楔化。晶体楔化不仅使晶体利用率下降，更严重的是影响晶体质量。对KDP型晶体楔化研究表明，楔化是$\rm M^{3+}$杂质离子在柱面-锥面交界处吸附造成的。$\rm M^{3+}$进入晶体还造成一系列的缺陷，由于分配系数变化在柱面部分出现杂质浓度不同的生长带。锥面生长扇形的缺陷也和晶体楔化状况有关，楔化角$\theta$愈大，进入晶体锥面部分的杂质含量愈多，在形貌图上可清楚看到衬比高的生长带，$\theta$变小，衬比不明显，在$\theta=0$时，这类缺陷消失。可见在晶体外形上反映出来的楔化程度也是晶体内在完整性的可见标志。
+
+除楔化外，晶体的另一类常见的外观缺陷是晶面的不平整，其中较典型的是ADP，KDP晶体柱面上经常出现的寄生晶体（添晶，见图3.39）。这些寄生晶体取向大致与母晶平行地连生于晶面上，顶部逐渐抬起。寄生晶体很容易在晶种应力较大的部分（如籽晶夹附近）和缺陷处出现。这种寄生晶体可视为平行连生的一种形式，它很可能在外界条件（应力、杂晶或机械杂质）刺激下引起晶体柱面上镶嵌构造突出生长的结果。寄生晶体刺激柱面生长，使其附近柱面隆起并在晶面上造成许多圈纹，在晶体中产生严重的应力。
+
+存在楔化、寄生晶体等外观缺陷的晶体，其内部肯定存在大量缺陷。因此要获得高质量的晶体，除了要求内部无包藏外，外观的完整性也必须良好，即不能楔化，晶面要光滑平整。
+
+\paragraph{(3)开裂}内应力如果超过强度极限，晶体就会发生开裂。内应力由晶格畸变引起即产生于条纹，生长扇形界，籽晶与晶体间晶格失配，某些可溶性杂质长入和细微的或胶状的机械杂质的包裹等。水溶液晶体开裂常发生在籽晶附近，除籽晶与晶体晶格失配外，籽晶架附近的应力特别大，当晶体长到坚硬的籽晶架上去时，开裂就有可能发生。“点”状籽\footnote{原书此处作“子”。}晶和“杆”状籽晶沿着乳胶管生长时可减少应力。KDP型晶体柱面上生长寄生晶体或楔化，内应力都很大。不均匀的热流冲击又是一个引起开裂的因素，对于大晶体其危险性更大，所以在晶体生长和保存期间应避免大的热波动。四方相DKDP晶体在亚稳区生长时有时也出现开裂，这是四方相向单斜相转变引起的，改变溶液状态可避免这种开裂。
+
+\paragraph{(4)光学不均匀性}外形完整无包藏的透明晶体也不一定是均匀的好晶体。如果在晶体中有应力和一些微小的散射颗粒存在，则在光学上是不均匀的。进入晶体的一些杂质不均匀的分布，引起不同部位电导率出现差别，使该晶体在电学上也是不均匀的。
+
+晶体中各种应力的存在是造成光学不均匀的原因。
+
+由于晶格应力能改变累积强度，因此X射线形貌法是研究这种不均匀性的好方法。此外，对单轴晶（如KDP型晶体），用消光比（ER）来检查光学均匀性也是很方便的。对于晶体中比较好的部分，消光比达到$>10000:1$，而对应力大的区域，消光比可急剧下降至$50:1$，这是一个很灵敏的检查方法。对于无应力条件下有自然双折射的晶体可以附加旋转补偿片，可用相同的方法进行测量。
+
+透明晶体中的散射颗粒都是在从溶液中生长的过程中包藏进去的，由于颗粒很小，可使用He-Ne激光束照射，然后在与光束成$90^\circ$的方向上进行超显微观察。
+
+近年来由于光电子技术的发展，需要许多非线性晶体来作为激光的开关、调制、变频等元件。这些应用对晶体材料的质量要求很高。首先在所使用的波段内必须很好地透光，因此必须尽可能减少散射颗粒，因为这些颗粒能引起晶体中的光损耗，甚至引起在强光下晶体的破坏。此外要求晶体的折射率均匀性尽可能地好。
+
+~\\
+
+水溶性单晶虽然较易培养，但要从溶液中生长出大块、纯净、完整性高的单晶也是很困难的。严格地说，真正均匀性良好的晶体还没有生长出来。根据上述分析，要培养出符合光电子学要求的高完整性的优良单晶，必须满足下列条件：
+\begin{enumerate}[(i)]\itemsep -0.5ex
+\item 高质量的籽晶；
+\item 高纯度的原料和光学纯的溶液；
+\item 合理的搅拌；
+\item 十分规则的生长速度
+\end{enumerate}
+\noindent 为此，除了在技术上要采取相应措施（如提高控温精度，发展大型育晶器和提倡恒温法生长等）外，还需要利用新的实验手段（如X射线形貌术、放射自显影术、激光全息相衬干涉技术等）开展生长条件对晶体均匀性和完整性影响的研究。关于这方面的工作，近几年来甚为活跃，它使得“溶液生长”这一古老的生长方法从工艺和理论都大大向前推进了一步。
+
