cp03/sc04_01.tex: 插图

--- a/vol1/cp03/sc04_01.tex
+++ b/vol1/cp03/sc04_01.tex
@@ -11,7 +11,17 @@
 
 KTN，$\rm NaNO_3$和NaCl一类晶体，各个方向生长速率相近，故可采用“点”状晶种。使用时将小粒晶种嵌入乳胶管一端，让完整性好的部分露出乳胶管，乳胶管的另一端套到掣晶杆上（图3.27）。“点”状籽晶生长过程恢复区很小，不利的“遗传”因素较易消除，晶体紧包住乳胶管生长，降低了掣晶杆与晶体间的应力。
 
-（图3.27）（图3.28）
+\begin{figure}[htbp]
+ \centering
+ \includegraphics[width=0.4\textwidth]{fig/cp03/img3.27.jpg}
+ \caption{点状籽晶（$\rm NaNO_3$）。}
+\end{figure}
+
+\begin{figure}[htbp]
+ \centering
+ \includegraphics[width=0.4\textwidth]{fig/cp03/img3.28.jpg}
+ \caption{杆状籽晶（TGS）。}
+\end{figure}
 
 TGS和LSH晶体$Z$向生长慢，采用平行于$Z$轴的“杆”状籽晶是合适的（图3.28）。由于在$X$，$Y$方向上生长较快，长出的晶体趋于各向匀称，这就提高了晶体产率和利用率。如采用平行于[111]晶稜的“杆”状籽晶来生产KDP型晶体，生长时恢复区很小，亦不需要成锥过程，对CDA，DCDA这类成锥较困难的晶体特别有意义（图3.29）。
 
@@ -21,4 +31,10 @@ ATGSAS采用平行于(010)的籽晶片，这样可以生长出单畴的大晶片
 
 晶体的生长习性是受生长条件影响的。所以实际工作中采用什么样的籽晶应同晶体生长习性，生长条件和应用要求结合起来考虑。
 
-（图3.29）
+\begin{figure}[htbp]
+ \centering
+ \includegraphics[width=0.8\textwidth]{fig/cp03/img3.29.jpg}
+ \caption{KDP型晶体籽晶类型。图中：}
+ 1为全锥籽晶；2为半锥籽晶；3为平行锥面的\{011\}片状籽晶；
+ 4为$Z$切(001)片状籽晶；5为$Z$切片成锥。
+\end{figure}
