cp03/sc01_01.tex: 修正下标错误问题

--- a/vol1/cp03/sc01_01.tex
+++ b/vol1/cp03/sc01_01.tex
@@ -19,7 +19,7 @@
  （116℃是$\rm KNO_3$饱和溶液的沸点，126℃是$\rm KNO_3$的晶相转变温度）。
 \end{figure}
 
-如果从相图的观点来看问题，把溶液置于更广阔的范围内来讨论时，这些矛盾就可以统一起来了。例如在$\rm LiNO_3-KNO_3$体系的相图中（图3.1），低共熔点左右的两条液相线的范围是差不多的，都表示纯物质熔点因另一组分的加入而逐渐降低。该相图也可看成是溶解度图。此时，右边的曲线表示LiNO3在$\rm KNO_3$中的溶解度（$\rm KNO_3$溶液）；左边曲线则表示$\rm KNO_3$在LiNO3中的溶解度（LiNO3）。当状态点十分接近于$\rm KNO_3$熔点时（如成分为99.9\%的$\rm KNO_3$和0.1\%的LiNO3的样品在接近$\rm KNO_3$熔点（图3.1、图3.2）的温度下），LiNO3是液体，$\rm KNO_3$也在低于其熔点的温度下熔化。这种状态，一般认为是$\rm KNO_3$在少量LiNO3存在下熔化了，但也可以看成是999份$\rm KNO_3$溶解在1份LiNO3中。$\rm H_2O-KNO_3$体系的相图（图3.2）和$\rm LiNbO_3-KNO_3$体系是类似的。不同的是，其中一个组分，即H2O的熔点很低，左右两曲线的范围相差很大，但本质上没有什么差别。右边的曲线表示$\rm KNO_3$熔点因$\rm H_2O$的存在而下降的曲线，左边的曲线表示$\rm KNO_3$使$\rm H_2O$的冰点下降的曲线。由于$\rm H_2O$在常温下是液体，通常把右边曲线的下半部（图3.2中虚线左边，温度较低，含水量较多部分）看成$\rm KNO_3$在水中的溶解度曲线，而不是看成水使$\rm KNO_3$熔点降低的液相线。但在曲线的上部，我们虽然也可以把温度接近于$\rm KNO_3$熔点，含水量很少的液相（如含99.9\% $\rm KNO_3$，0.1\%$\rm H_2O$）看成是999份$\rm KNO_3$溶解在一份水中的溶液，但习惯上还是把这种情况看成$\rm KNO_3$在少量水的存在下熔化了。
+如果从相图的观点来看问题，把溶液置于更广阔的范围内来讨论时，这些矛盾就可以统一起来了。例如在$\rm LiNO_3-KNO_3$体系的相图中（图3.1），低共熔点左右的两条液相线的范围是差不多的，都表示纯物质熔点因另一组分的加入而逐渐降低。该相图也可看成是溶解度图。此时，右边的曲线表示$\rm LiNO_3$在$\rm KNO_3$中的溶解度（$\rm KNO_3$溶液）；左边曲线则表示$\rm KNO_3$在LiNO3中的溶解度（$\rm LiNO_3$）。当状态点十分接近于$\rm KNO_3$熔点时（如成分为99.9\%的$\rm KNO_3$和0.1\%的$\rm LiNO_3$的样品在接近$\rm KNO_3$熔点（图3.1、图3.2）的温度下），$\rm LiNO_3$是液体，$\rm KNO_3$也在低于其熔点的温度下熔化。这种状态，一般认为是$\rm KNO_3$在少量$\rm LiNO_3$存在下熔化了，但也可以看成是999份$\rm KNO_3$溶解在1份$\rm LiNO_3$中。$\rm H_2O-KNO_3$体系的相图（图3.2）和$\rm LiNbO_3-KNO_3$体系是类似的。不同的是，其中一个组分，即$\rm H_2O$的熔点很低，左右两曲线的范围相差很大，但本质上没有什么差别。右边的曲线表示$\rm KNO_3$熔点因$\rm H_2O$的存在而下降的曲线，左边的曲线表示$\rm KNO_3$使$\rm H_2O$的冰点下降的曲线。由于$\rm H_2O$在常温下是液体，通常把右边曲线的下半部（图3.2中虚线左边，温度较低，含水量较多部分）看成$\rm KNO_3$在水中的溶解度曲线，而不是看成水使$\rm KNO_3$熔点降低的液相线。但在曲线的上部，我们虽然也可以把温度接近于$\rm KNO_3$熔点，含水量很少的液相（如含99.9\% $\rm KNO_3$，0.1\%$\rm H_2O$）看成是999份$\rm KNO_3$溶解在一份水中的溶液，但习惯上还是把这种情况看成$\rm KNO_3$在少量水的存在下熔化了。
 
 由此可见，熔体和溶液是连续的，所以熔化和溶解在本质上是一样的。可以把熔化看成是被溶解所液化的特殊情况。当水是溶液的一个组分时，一般总是看成溶质（盐类）溶在一定温度的水中，而不是从水的存在使盐的熔点降低这个角度来看问题。习惯上把水多时称为溶解，而水很少时看成熔化。
 
