vol1/cp02.tex: 完成录入

--- a/vol1/cp02.tex
+++ b/vol1/cp02.tex
@@ -1,6 +1,12 @@
 ﻿\chapter{晶体生长动力学}
 \authors{张克从\quad 陈万春}
 
+晶体生长是一种相变过程，它是各种复杂物理现象相互作用的结果，它受晶体生长热力学和动力学等各种因素相互作用的影响，加之人们对熔体或溶液的结构细节仍缺少充分认识，因此，至今仍难为实际晶体生长过程提出一个完备的理论模型，致使晶体生长理论与其实践仍存有一定的差距。
+
+概括地讲，晶体生长理论应包括热力学和动力学两大方面。本书第一张主要阐明了晶体生长热力学理论，本章专门论述晶体生长动力学。
+
+晶体生长动力学主要是阐明在不同生长条件下的晶体生长机制，以及晶体生长速率与生长驱动力间的规律。晶体生长界面结构决定了生长机制，不同的生长机制表现出不同的生长动力学规律。晶体生长速率受生长驱动力的支配，当改变生长介质的热量或质量输运时，晶体生长速率也随之而改变。晶体生长形态取决于晶体的各晶面间的相对生长速率。当生长介质的输运性质以及其他动力学因素改变时，不仅能使晶体生长速率发生变化，而且会影响到晶体生长形态与生长界面的稳定性，晶体生长界面是否稳定，关系到生长单晶的完整性。因此，晶体的完整性与其生长动力学有着密切的联系。
+
 \input{vol1/cp02/sc01}
 \input{vol1/cp02/sc02}
 \input{vol1/cp02/sc03}
