cp02/sc01_02.tex: 手工完成录入

--- a/vol1/cp02/sc01_02.tex
+++ b/vol1/cp02/sc01_02.tex
@@ -1,1 +1,6 @@
 \subsection{晶体生长的理想形态}
+具有几何形态的实际晶体，经过晶面角测量和极射赤平投影后，能够去伪存真，而描绘出晶体的理想形态。晶体的理想形态可分为单形和聚形。
+
+当晶体在自由体系中生长时，若生长出的晶体形态的各个晶面的面网结构相同，而且各个晶面都是同形等大，这样的晶体理想形态称为单形。若在晶体的理想形态中，具有两套以上不同形、也不等大的晶面，这种晶体的理想形态称为聚形，而聚形是由数种单形构成的。
+
+研究实际晶体生长形态，首先应当研究它的理想形态，以寻求晶面或晶带在三维空间分布的几何规律性，然后再进一步研究晶体生长形态出现的外在原因。
