cp02/sc01_01.tex: 完成部分录入
后半部分公式完成录入，前半部分文字等待“永远第二的学生”的文字。

--- a/vol1/cp02/sc01_01.tex
+++ b/vol1/cp02/sc01_01.tex
@@ -1,1 +1,20 @@
 \subsection{晶体生长形态与生长速率间的联系}
+
+% 等待“永远第二的学生”的录入
+【此处等待插入“永远第二的学生”的部分录入】
+
+（图2.1）
+
+在图2.1中，$l_{11},l_{01}$分别代表(11),(01)晶面的大小，$R_{11},R_{01}$分别代表(11),(01)晶面的生长速率。从图2.1所表明的简单的几何关系中可求得
+\begin{align*}
+R_{01}&=\frac{l_{01}}{2}+\sqrt{2}\cdot\frac{l_{11}}{2},\\
+\frac{l_{01}}{2}&=\sqrt{2}\cdot R_{11}-R_{01},\\
+R_{11}&=\sqrt{2}\cdot R_{01}-\frac{l_{11}}{2},\\
+\frac{l_{11}}{2}&=\sqrt{2}\cdot R_{01}-R_{11}
+\end{align*}
+\begin{equation}
+\frac{l_{01}}{l_{11}}=\frac{\displaystyle\sqrt{2}\left(\frac{R_{11}}{R_{01}}\right)-1}{\displaystyle\sqrt{2}-\frac{R_{11}}{R_{01}}}.
+\end{equation}
+根据式(2.1)，当$R_{11}/R_{01}\geq\sqrt{2}$时，二维模式晶体生长形态仅为\{01\}单形；当$R_{11}/R_{01}\leq\sqrt{2}/2$时，二维模式晶体生长形态仅为\{11\}单形；当$\sqrt{2}/2<R_{11}/R_{01}<\sqrt{2}$时，二维模式晶体生长形态为\{01\}与\{11\}两种单形所组成的聚形。
+
+同理，对于\{001\}与\{111\}两种单形所组成的立方晶系晶体形态，不难证明，它取决于(001)与(111)两晶面的相对生长速率的比值。
