cp02/sc01_03.tex: 手工录入完成

--- a/vol1/cp02/sc01_03.tex
+++ b/vol1/cp02/sc01_03.tex
@@ -1,1 +1,5 @@
 \subsection{晶体生长的实际形态}
+晶体生长的实际形态是由晶体内部结构和形成时的物理化学条件所决定的。长期以来，人们研究晶体生长的实际形态是从天然矿物晶体开始的，通过对天然石英晶体的形态研究，不仅加深了对天然石英晶体形成时物理化学条件的认识，为寻找石英矿床提供了科学依据，而且为人工石英晶体的生长形态的研究奠定了学科基础。
+
+人工晶体生长的实际形态可大致分为两种情况。当晶体在自由体系中生长时，如晶体在气\footnote{原文作“汽”。}相、溶液等生长体系中生长时可近似地看做自由生长体系，晶体的各晶面的生长速率不受晶体生长环境的任何约束，各晶面的生长速率的比值是恒定的，而晶体生长的实际形态最终取决于各晶面生长速率的各向异性，呈现出几何多面体形态。当晶体生长遭到人为的强制时，晶体各晶面生长速率的各向异性便无法表现出来，只能按人为的方向生长。熔体提拉法、坩埚下降法、区域熔化法等等均可看为晶体的强制生长体系。但有时在强制生长体系中，晶体的顽强的生长习性也会表现出来的。例如，当晶体采用熔体提拉法生长时，虽然晶体的径向生长受到温场的一定约束，但晶体生长的各向异性在径向有时还能显露。沿\{111\}方向提拉石榴石晶体，在固─液界面上常出现\{112\}小面。对氧化物和半导体晶体，在其固液界面上出现小晶面是一种较为普遍的现象，这与自由生长体系中晶体生长显现出几何多面体形态一样，这种现象是晶体生长各向异性的表现。
+
