cp02/sc01_04.tex: 手动录入至(1)结束

--- a/vol1/cp02/sc01_04.tex
+++ b/vol1/cp02/sc01_04.tex
@@ -1,1 +1,40 @@
 \subsection{晶体几何形态与其内部结构间的联系}
+\paragraph{(1)晶体几何形态的表示方式}根据晶体学有理指数定律，晶体几何形态所出现的晶面符号$(hkl)$或晶棱符号$[hvw]$是一组互质的简单整数。
+
+按照Bravais法则，当晶体生长到最后阶段而保留下来的一些主要晶面是具有面网密度较高，而面网间距$d_{hkl}$较大的晶面。
+
+晶体生长形态的变化，除同质多相的晶体外，不仅与晶体生长条件有关，而且也能反映出晶体结构的一些信息。
+
+从X射线晶体结构分析结果可知，不管是高级晶系或是中、低级晶系晶体，晶格面网间距$d_{hkl}$、晶格常数（$a,b,c,\alpha,\beta,\gamma$）和面网族$\{hkl\}$三者之间存在着一定的关系，例如，对于立方面心晶格晶体，面网间距$d_{hkl}$、晶格常数$a$和面网族$\{hkl\}$三者之间存在着如下关系：
+
+当$h,k,l$全为奇数或全为偶数时
+\begin{equation}
+d_{hkl}=\frac{a}{\sqrt{h^2+k^2+l^2}}
+\end{equation}
+
+当$h,k,l$中有奇数也有偶数时
+\begin{equation}
+d_{hkl}=\frac{a}{2\sqrt{h^2+k^2+l^2}}
+\end{equation}
+从式(2.2)和式(2.3)中可得出，$a^2/d^2_{hkl}$值随$h,k,l$值变化是有规律性的，见表2.1。
+
+（表2.1\quad$a^2/d^2_{hkl}$值随$h,k,l$值的变化规律）
+
+根据上述Bravais法则，属于这种结构的晶体，出现在晶体形态中的单形顺序应为$\{111\},\{100\},\{110\},\cdots$。天然的萤石（$\rm CaF_2$）和金刚石（C）等晶体，基本上是符合上述规律的。但对于中、低级晶系晶体，尤其是对于低级晶系晶体，面网间距$d_{hkl}$、晶格常数（$a,b,c,\alpha,\beta,\gamma$）和面网族$\{hkl\}$三者之间的关系就复杂化了，但$d_{hkl}$值随着面网族$\{hkl\}$的减小而增大的一般倾向却仍然存在。更值得注意的是，当晶体结构中存在着螺旋轴和滑移面对称性时，则情况变得更加复杂了。这时候必须对面网间距$d_{hkl}$进行修正，否则计算结果与实际情况就会表示不符。
+
+当晶体结构中具有螺旋轴时，只影响与其垂直的面网间距$d_{hkl}$值，而修正因子$\beta$应随螺旋轴的轴次不同而不同，对于：
+\begin{align*}
+&2_1,4_2,6_3\text{ 螺旋轴}, &\beta = 1/2, \\
+&3_1,3_2,6_2,6_4\text{ 螺旋轴}, &\beta = 1/3,\\
+&4_1,4_3\text{ 螺旋轴}, &\beta = 1/4,\\
+&6_1,6_5\text{ 螺旋轴}, &\beta = 1/6.
+\end{align*}
+
+例如属于三方晶系的石英（$\alpha\text{-}\rm SiO_2$）晶体，若不考虑其结构中的$3_1$或$3_2$螺旋轴时，根据Bravais法则的推论，$z\{0001\}$单形应在晶体形态中出现的比重最大，但实际上所出现的概率却很少，若考虑到垂直于$z\{0001\}$单形的$_1$或$3_2$螺旋轴的重要作用时，而$z\{0001\}$单形应改为$z\{0003\}$单形，这样对于$z\{0001\}$单形很少出现的原因，就可以得到合理的解释。
+
+同样，当晶体结构中存在着滑移面时，对晶体形态中所出现的单形比重次序也能发生影响，可以证明，与(001)面平行的滑移面，只能对$\{hkl\}$单形范围内的某些单形发生影响。例如$a$滑移面或$b$滑移面，仅对$h$或$k$为奇数的$\{hko\}$单形产生影响，这由于等同部分形成的面网间距$d_{hkl}$与密度都比具有普通对称面存在时少$1/2$的原因\footnote{此处费解。}。同样，不难理解，当晶体结构中具有$n$滑移面时，仅对$(h+k)$为奇数的$\{hko\}$单形产生影响，而对$d$滑移面，仅对$(h+k)$不等于4的倍数的$\{hko\}$单形产生影响。
+
+上述所讨论的晶体形态与晶体结构间的联系只能看作是一个粗略的轮廓，它是晶体结构对称性在其形态上反映的一些信息，但在实际情况下，由于晶体生长的外界因素及其结构基元间键合作用的影响，即便是同一品种的晶体生长形态往往也会有所不同，这样就远非像Bravais法则所推论的那样简单了。
+
+\paragraph{(2)周期键链理论}
+% TODO: 周期键链理论
