cp02/sc01_04.tex: 小bug修复

--- a/vol1/cp02/sc01_04.tex
+++ b/vol1/cp02/sc01_04.tex
@@ -30,7 +30,7 @@ d_{hkl}=\frac{a}{2\sqrt{h^2+k^2+l^2}}
 &6_1,6_5\text{ 螺旋轴}, &\beta = 1/6.
 \end{align*}
 
-例如属于三方晶系的石英（$\alpha\text{-}\rm SiO_2$）晶体，若不考虑其结构中的$3_1$或$3_2$螺旋轴时，根据Bravais法则的推论，$z\{0001\}$单形应在晶体形态中出现的比重最大，但实际上所出现的概率却很少，若考虑到垂直于$z\{0001\}$单形的$_1$或$3_2$螺旋轴的重要作用时，而$z\{0001\}$单形应改为$z\{0003\}$单形，这样对于$z\{0001\}$单形很少出现的原因，就可以得到合理的解释。
+例如属于三方晶系的石英（$\alpha\text{-}\rm SiO_2$）晶体，若不考虑其结构中的$3_1$或$3_2$螺旋轴时，根据Bravais法则的推论，$z\{0001\}$单形应在晶体形态中出现的比重最大，但实际上所出现的概率却很少，若考虑到垂直于$z\{0001\}$单形的$3_1$或$3_2$螺旋轴的重要作用时，而$z\{0001\}$单形应改为$z\{0003\}$单形，这样对于$z\{0001\}$单形很少出现的原因，就可以得到合理的解释。
 
 同样，当晶体结构中存在着滑移面时，对晶体形态中所出现的单形比重次序也能发生影响，可以证明，与(001)面平行的滑移面，只能对$\{hkl\}$单形范围内的某些单形发生影响。例如$a$滑移面或$b$滑移面，仅对$h$或$k$为奇数的$\{hko\}$单形产生影响，这由于等同部分形成的面网间距$d_{hkl}$与密度都比具有普通对称面存在时少$1/2$的原因\footnote{此处费解。}。同样，不难理解，当晶体结构中具有$n$滑移面时，仅对$(h+k)$为奇数的$\{hko\}$单形产生影响，而对$d$滑移面，仅对$(h+k)$不等于4的倍数的$\{hko\}$单形产生影响。
 
