cp02/sc01.tex: 更新“永远第二的学生”的录入

--- a/vol1/cp02/sc01.tex
+++ b/vol1/cp02/sc01.tex
@@ -1,4 +1,7 @@
 \section{晶体生长形态}
+人们自17世纪初就开始了对矿物晶体和天然结晶的形态研究，几个世纪以来，通过对晶体形态的反复观察、分析与比较，归纳出一系列有关晶体形态（几何）的经验定律，诸如晶面角守恒定律、有理指数定律、晶体对称性定律、晶带定律等，这些经验点那个了吧为后来的晶体学发展奠定了学科基础。晶体生长形态是其内部结构的外在反映，晶体的各个晶面间的相对生长速率决定了他的生长形态。晶体生长形态虽受其内部结构的对称性、结构基元间键合和晶体缺陷等因素的制约，但在很大程度上还受到生长环境相的影响。因此，同一品种的晶体（即成分与结构均相同），既能形成具有对称特征的几何多面体，又能生长成特殊的形态。晶体生长形态能部分地反应出它的形成历史，因此，研究晶体生长形态，有助于人们认识晶体生长动力学过程，可为探讨实际晶体生长机制提供线索。
+
+广义来讲，对于晶体生长形态学，不仅要研究晶体生长后的宏观几何外形以及其生长过程中宏观几何外形的演变，而且还应包括生长界面的显微形态和生长界面的稳定性等内容，这些研究内容，我们在下面将进行分析与讨论。
 
 \input{vol1/cp02/sc01_01.tex} %晶体生长形态与生长速率间的联系
 \input{vol1/cp02/sc01_02.tex} %晶体生长的理想形态
