cp02/sc01_01.tex: 插入“永远第二的学生”的录入

--- a/vol1/cp02/sc01_01.tex
+++ b/vol1/cp02/sc01_01.tex
@@ -1,7 +1,9 @@
 \subsection{晶体生长形态与生长速率间的联系}
+一般说来，晶体在自由的生长体系中生长，晶体的各晶面生长速率是不同的，即晶体的生长速率是各向异性的。通常所说的晶体的晶面生长速率$R$是指在单位时间内晶面$(hkl)$沿其法线方向向外平行推移的距离（$d$），并称为线性生长速率。
 
-% 等待“永远第二的学生”的录入
-【此处等待插入“永远第二的学生”的部分录入】
+晶体生长的驱动力来源于生长环境相（汽相、溶液、熔体）的过饱和度（$\Delta c$），或过冷度（$\Delta T$）。人工生长单晶时，在保证晶体生长质量的前提下，人们总是希望提高生长速率，但是要维持恒定的生长速率，其工艺技术是很难达到的。常常由于晶体生长速率的改变，导致晶体缺陷的产生，这不仅有损于晶体的完整性，而且晶体的生长形态也要发生变化的。
+
+晶体生长形态的变化来源于个镜面相对生长速率（比值）的改变，现以二维模式晶体生长为例来说明晶面的相对生长速率的变化与晶体生长形态间的联系（如图2.1所示）。
 
 （图2.1）
 
