cp01/sc01_04.tex: 手工录入完成

--- a/vol1/cp01/sc01_04.tex
+++ b/vol1/cp01/sc01_04.tex
@@ -1,1 +1,48 @@
 ﻿\subsection{相律}
+当我们研究一个体系时，一般说来，它是由不同的元素或化合物所组成的。这些组成的元素或化合物形成不同的相（可能是一种或多种）。在不同的条件（压力、温度、浓度）下，体系达到平衡时所出现的相的数目也会有所不同。我们感兴趣的是，这些变量之间究竟存在什么样的关系。掌握了这个关系，我们就能了解、掌握和控制体系向着所需要的方向变化和发展。相律就是表示这种关系的一个方程式。它表示一个多相平衡体系的自由度与相数、组元数及影响平衡的外界条件数目之间的关系。也就是说，必须知道要有多少的条件才能决定体系的状态，实际上这就是一个众所周知的代数定理（即必须有$n$个方程式才能确定$n$个变数的数值）在物理化学中的具体应用。
+
+关于相的概念在前面我们已经讲过，现介绍组元数的概念。任何一个体系总包含一些不同的元素及化合物，我们把这些元素和化合物称作组分。凡在体系内可以独立变化，而且决定着各相成分的组分就称为这个体系的组元。在没有组分间关系的限制条件时，体系的组元数就等于它的组分数。如果体系内有化学反应或存在其他的组分间关系的限制条件（如某几个组分间浓度之比固定等）时，那么它的组元数就不等于它的组分数，而是等于组分数减去组分间关系的限制条件数。例如，$\rm LiIO_3$水溶液，组分数为$2$（即$\rm LiIO_3$和水），组元数亦为$2$。而$\rm NaCl$和$\rm KNO_3$的水溶液，存在着一个化学反应
+$$\rm NaCl + KNO_3 \rightleftharpoons NaNO_3+KCl,$$
+这个体系共含有5个组分（$\rm NaCl,KNO_3,NaNO_3,KCl,H_2O$）。但由于其中有一个化学反应，同时$\rm NaNO_3$和$\rm KCl$是反应的产物，且其浓度比必为$1:1$，所以这个体系的组元数为3（可以认为是$\rm H_2O,NaCl,KNO_3$或$\rm H_2O,NaNO_3,KCl$）。水、冰、水蒸气组成的体系，则是一个组分（$\rm H_2O$），也是一个组元。我们把由一个组元组成的体系称为单元系，两个组元组成的体系称为二元系。其他的依此类推。
+
+关于自由度数的概念，它是指一个平衡体系的可变因素（例如每一相的温度、压力、成分等）的数目。这些因素在一定范围内可以任意改变，而不使任何原有的相消失，也不使任何新相产生。例如，单组元的水体系，在一定范围内压力与温度可以任意改变，而不产生水蒸气或冰，这时我们称它有两个自由度（体系内只有水这一个相）。又如水和水蒸气平衡共存（两相共存）的单组元体系内，由于温度和压力存在一定的关系（$\mu_\text{水}(T,P)=\mu_\text{汽}(T,P)$），所以两者之中只有一个可以在一定范围内变化，否则就将导致某一相的消失。这样，这个体系的自由度就只有一个。而水、冰、水蒸气三相平衡的单元系中，这3个相只有在固定的温度和压力下才能平衡共存，这个体系没有任何可变的因素，我们称它是自由度为零的不变体系。
+
+下面来推导相律的表达式。在一个不存在化学反应的体系中，设有$c$个组分，分布在$\phi$个相中。要确定一个相的状态必须知道该相的温度、压力以及$(c-1)$个浓度的值（浓度采用摩尔百分数表示，$c$个组分浓度之和为$100\%$）。因此，要知道整个体系的状态，就必须知道$\phi$个相中的温度、压力及组分浓度，这样必须了解下列各相的数值：
+$$
+\left.
+\begin{aligned}
+&P^a,& &T^a,& &(c-1)^a&\text{ 个浓度},\\
+&P^b,& &T^b,& &(c-1)^b&\text{ 个浓度},\\
+&\hspace{0.5em}\vdots&&\hspace{0.5em}\vdots&&\hspace{1.5em}\vdots&\\
+&P^\phi,& &T^\phi,& &(c-1)^\phi&\text{ 个浓度},
+\end{aligned}
+\right\}
+\begin{aligned}
+&\text{式中}a,b,\cdots,\phi\text{等}\\
+&\text{表示}a\text{相},b\text{相},\cdots\phi\text{相等（不是幂指数）。}
+\end{aligned}
+$$
+但在平衡时，$P^a=P^b=\cdots=P^\phi=P,\ T^a=T^b=\cdots=T^\phi=T$，所以只需要知道$\{\phi(c-1)+2\}$个变数的数值就够了。
+
+另外，根据相平衡的条件，每个组份在各相中的化学势相等，有
+$$\begin{matrix}
+\mu_1^a&=&\mu_1^b&=&\cdots&=&\mu_1^\phi,&\text{共}&(\phi-1)&\text{个等式},\\
+\mu_2^a&=&\mu_2^b&=&\cdots&=&\mu_2^\phi,&\text{共}&(\phi-1)&\text{个等式},\\
+\vdots&&\vdots&&\vdots&&\vdots&&\vdots&\\
+\mu_c^a&=&\mu_c^b&=&\cdots&=&\mu_c^\phi,&\text{共}&(\phi-1)&\text{个等式}.
+\end{matrix}$$
+上列各式中的下标$1,2,\cdots,c$表示组元数，所以共有$c(\phi-1)$个方程式。确定由$\phi$个相组成的体系的状态所需要的变数数目与已有的方程式数目之差为
+$$\phi(c-1)+2-c(\phi-1)=c+2-\phi.$$
+这个结果的物理意义是，要想确定$\phi$个相的状态时，需要知道$(c+2-\phi)$个状态变数的数值。例如，上面提到的水、水蒸气这个两相共存的体系，$\phi=2$而$c=1$，故$c+2-\phi=1$，也就是说，影响相的存在的变数中，例如压力、温度、组分浓度（因是单元系，故组分不能变），只有压力和温度这两者之一才是可变的，即自由度为1。以$f$代表自由度数，上面的结果可以写为
+\begin{equation}
+f=c+2-\phi
+\end{equation}
+
+应用相律时要注意以下几点：
+\begin{enumerate}[(1)] \itemsep -0.5ex
+\item 这个式子推导时要求体系处于平衡状态，因此只适用于平衡状态的体系。
+\item 这个式子的数目字$2$，表示整个体系的温度、压力均匀一致，所以是两个变数。若遇到不符合此条件的体系时（如渗透体系），即需补充变数。
+\item 只以$T,P$为外界变数，就意味着忽略电磁力、表面力、重力等效应。虽然实际情况中有很多是与此相符合的，但不可忘记也有与事实不符的可能性。
+\item 自由度只取零以上的正值，不能取负值。如出现$f$取负值时，说明体系可能处于非平衡状态。
+\end{enumerate}
+\newpage
