cp02/sc02.tex: 由“永远第二的学生”录入

--- a/vol1/cp02/sc02.tex
+++ b/vol1/cp02/sc02.tex
@@ -1,4 +1,10 @@
 \section{晶体生长的输运过程}
+晶体生长包括一系列过程，诸如晶体生长基元形成过程、晶体生长的运输过程、晶体生长界面动力学过程等，其中输运过程是一个重要的环节。从宏观的观点来看，晶体生长过程实际上是一个热量、质量和动量的运输过程。晶体生长时空间不连续与非均匀化的过程，结晶作用仅在生长界面上发生。对熔体生长来说，界面的推进是通过温度梯度进行的。要想生长出优质完整的晶体，在熔体生长体系中，必须建立合理的温度梯度分布，因为它和热量淑云中的热传输机制想联系，晶体生长时所释放出的结晶潜热必须及时地从界面处输运出去，然后才能发生凝固过程。晶体从气相或溶液中生长时，生长基元首先从生长体系的其他部位输运到生长界面，然后再进行生长基元脱溶剂化、脱附、表面扩散、生长基元进入生长位置等界面反应过程。
+
+晶体的生长输运过程主要包括热量、质量和动量输运等。这些效应均称为输运效应，而各种不同形式的输运效应是相互联系的，例如气相各部分的运动速度可以彼此不同而造成动量输运，但在气相动量运输的同时会引起质量的输运；同样，在气相中，由于温度梯度而造成的热量输运也会引起质量输运效应。
+
+晶体生长的输运过程对其生长速率产生限制作用，并支配着生长界面的稳定性，对于生长晶体的质量有着极其重要的作用。
+晶体生长的运输理论是流体力学理论发展的一个重要组成部分，多年来一直是人们所关注的研究课题，并做了不少有意义的理论与实验工作，然而有关这一方面定量的研究结果至今还不多，造成这种状况的原因是多方面的，例如对粘滞性液体动力学方程求解的困难，特别是对于一般晶体生长过程中的实际边界条件，方程式的求解基本上是不大可能的；其次，由于受某些晶体生长条件的限制（高温、高压、密封、液体不透明等），使直接观察与测量造成困难，这也是影响深入研究的原因。
 
 \input{vol1/cp02/sc02_01.tex} %输运的类型
 \input{vol1/cp02/sc02_02.tex} %边界层理论
