cp02/sc02_01.tex: 由“永远第二的学生”录入至(1)

--- a/vol1/cp02/sc02_01.tex
+++ b/vol1/cp02/sc02_01.tex
@@ -1,1 +1,24 @@
 \subsection{输运的类型}
+晶体生长的输运类型，主要包括热量、质量和动量等类型，现分别加以阐明。
+
+\paragraph{(1)热量输运}从熔体中生长单晶，主要靠热量输运来实现。晶体生长靠体系中的温度梯度所造成的局部过冷来驱动，只要体系中存在着温度梯度，就会产生热量输运。温度梯度是一个矢量，它的方向是沿着温场的等温面法线从低温指向高温，而热量总是从高温向低温传递，即热量总是沿着温度梯度相反的方向输运。控制热量传输，提供一个合适而稳定的温场（温度的空间分布），使来自熔体的热量与结晶潜热从固液界面处连续不断的输运出去，从而保证单晶能够稳定而正常生长。显然，这是生长高质量单晶的一个关键因素。
+
+晶体生长过程中的热量输运，主要通过三种方式来进行，即辐射、传导和对流。在晶体生长过程中，哪一种热传递起主要作用，必须根据具体的工艺条件来定。一般来说，在高温时，界面处传递出去的大部分热量是从晶体表面辐射出去，而传导和对流则起次要的作用。在低温时，热量输运主要靠传导来进行。对于生长高熔点氧化物单晶，例如石榴石型晶体，辐射和传导是热量输运的两种主要形式。
+
+如果熔体的热量输运纯属于热传导的作用，这时与热量输运相对应的热传导方式可用下式表示：
+\begin{equation}
+\frac{\partial T}{\partial t}=K\Delta T=K(\frac{\partial^2T}{\partial x^2}+\frac{\partial^2T}{\partial y^2}+\frac{\partial^2T}{\partial z^2}).
+\end{equation}
+式中，$K$为热传导系数，$\Delta T$为熔体中的温度差值，$t$为时间。
+
+如果将熔体的物理常数（如密度、热容、热传导系数等）随温度而变化的值忽略不计，也不考虑对流传热所引起的能量消耗，那么熔体的对流传热方程可写为下式：
+\begin{equation}
+\frac{\partial T}{\partial t}+\rho c_pv\nabla T=K\Delta T,
+\end{equation}
+$$\nabla T=\frac{\partial T}{\partial x}i+\frac{\partial T}{\partial y}j+\frac{\partial T}{\partial z}k$$
+为温度梯度，式中，$v$为熔体的流动速度，$\rho$为熔体的密度，$c_p$为熔体的定压热容。
+在恒稳条件下，即$\dfrac{\partial T}{\partial t}=0$，那么式(2.5)便可进一步简化为
+\begin{equation}
+\rho c_pv\nabla T=K\Delta T.
+\end{equation}
+如果熔体处于静止状态，即$v=0$，那么，式(2.5)就变成上述热传导方程式，即变成式(2.4)。
