cp02/sc03.tex: 手工录入完成

--- a/vol1/cp02/sc03.tex
+++ b/vol1/cp02/sc03.tex
@@ -1,4 +1,11 @@
 \section{晶体生长界面的稳定性}
+晶体生长界面的稳定性涉及到晶体质量的优劣，当生长优质块状大单晶时，相变必须在稳定的生长界面上发生，以便保持晶体结构基元排列的均一性。
+
+多少年来，晶体生长界面稳定性理论一直是晶体生长领域中的一个重要研究课题，该理论实际上是将研究流体动力学稳定性的一套数学方法，可用来解决晶体生长过程中的界面稳定性问题\footnote{费解。}。
+
+晶体生长过程中的界面是否稳定，直接关系到晶体生长的形态。从自由生长体系中生长晶体（诸如从气相或溶液中生长晶体），在过去较长的时期内，人们大多从晶体几何外形来研究晶体形态与其外界生长条件间的关系。从强制生长体系中生长晶体（诸如熔体提拉、坩埚下降法生长晶体），人们最为关心的问题是固液界面的形状（凸形、凹形还是平坦）、在界面上有无小晶面出现等，这些问题涉及到界面稳定性理论。这里所说的界面稳定性是以宏观尺寸来度量的，界面起伏一般在10---100$\mu$m，因此不直接涉及原子尺度界面的光滑、粗糙和成核动力学理论，如果说涉及到原子尺度，通常仅为晶体生长过程中的化学元素成分。由界面不稳定性所显示的生长特种，对于透明晶体，可在光学显微镜下直接观察界面的形态变化；对于不透明晶体，经常可借助于晶体结构与组分变化的测定来鉴定。
+
+在晶体生长过程中，当生长界面从宏观尺度来看是光滑的，但偶尔受到温度、溶质浓度的起伏、或外因干扰时，如果这些干扰随着时间的推移和晶体生长过程的延续而逐渐衰减，最后自动消失，同时界面也随着恢复到原来光滑水平面的状态，这种界面则是稳定的。如果随着晶体生长过程的延续，这些偶尔产生的干扰逐渐增大，使界面产生凸凹不平的状态，这种界面则是不稳定的。
 
 \input{vol1/cp02/sc03_01.tex} %研究界面稳定性应遵循的几个原则
 \input{vol1/cp02/sc03_02.tex} %生长界面稳定性的判据
