cp02/sc03_01.tex: 手动录入完成

--- a/vol1/cp02/sc03_01.tex
+++ b/vol1/cp02/sc03_01.tex
@@ -1,1 +1,38 @@
 \subsection{研究界面稳定性应遵循的几个原则}
+晶体生长是一种相变过程。晶体从熔体中生长，熔体沿着运动的相界面转化为晶体。晶体从溶液中生长，通过溶质脱溶剂化，然后吸附在生长界面，再进入生长位置。这样在界面附近就必然要发生热量与质量输运，此关系到界面的稳定性。研究界面稳定性应遵循的几个原则为
+
+\begin{enumerate}[(1)] \itemsep -0.5ex
+\item 界面上能量（热）守恒
+\begin{equation}
+Lv\cdot\hat{n}=(-\kappa_l\nabla T_l+\kappa_s\nabla T_s)\cdot\hat{n},
+\end{equation}
+式中$L$为熔体单位体积的熔化潜热，$v$为晶体生长速率，$\hat{n}$为垂直于生长界面并指向熔体的单位长度，$\cdot$为标量积，$\kappa_l$为熔体的热导率，$\nabla=\dfrac{\partial}{\partial x}i+\dfrac{\partial}{\partial y}j+\dfrac{\partial}{\partial z}k$（哈密顿算符），$T_l$为熔体温度，$\kappa_s$为固相的热导率，$\T_s$为固相温度。
+
+\item 界面上溶质守恒
+\begin{equation}
+(c_l-c_s)v\cdot\hat{n}=-D_l\nabla c_i\cdot\hat{n},
+\end{equation}
+式中$c_l$为溶质在液相中的浓度，$c_s$为溶质在固相中的浓度，$D_l$为溶质的扩散系数。
+
+\item 界面温度的连续性
+\begin{equation}
+T_l=T_s,
+\end{equation}
+$T_l$与$T_s$分别为界面两侧的液相与固相的温度。
+
+\item 界面上温度与组分间的热力学关系。相界面上的温度与组分所偏离的热力学平衡值，为界面动力学过程提供了驱动力。当偏离的平衡值很大时，则界面动力学过程起支配作用，例如稳定的小晶面生长就是其中一例。当偏离的平衡值可以忽略不计时，输运过程起支配作用。生长界面是否稳定，主要受两种重要因素的支配，一个为界面附近的温度梯度，另一个为溶质浓度梯度，并且这两中因素又存在着相互关联的关系。
+
+\qquad 根据二元系相图可知，在相平衡的条件下，当溶质（作为一组元）的平衡分凝系数$k_0<1$时，在界面上的溶质被排除，从而促使溶液的凝固点降低，但当$k_0>1$时，溶质优先地进入晶体，促使溶液的凝固点升高。因此，溶液的凝固点是溶质浓度的函数。如果溶液中溶质的含量是微小的，则可将溶液的凝固点和溶质浓度间的关系金丝看成是线性关系，于是平坦界面溶液的凝固点与溶质浓度之间的关系可用下式表示：
+\begin{equation}
+T_i=T_0+mc_l
+\end{equation}
+式中$T_0$为纯溶剂的凝固点，$m$为液相线斜率，即$m=dT/dc_1$，此表示溶液中溶质改变单位浓度所引起的凝固点的变化，其数值取决于溶液的性质，对于提高溶液凝固点的溶质，即$k_0>1$时，$m$为正值；对于降低凝固点的溶质，即$k_0<1$时，$m$为负值。对于稀薄溶液体系，$m$可看作为常数。$c_l$为溶液中溶质的浓度。
+
+\qquad 对于曲界面，由于存在着Gibbs-Thomson效应，溶液的凝固点与其溶质浓度间的关系可用下式表示：
+\begin{equation}
+T_i=T_0+mc_l-T_0\Gamma(\frac{1}{r_1}+\frac{1}{r_2}),
+\end{equation}
+式中右面的第一项为纯熔体（溶剂）的凝固点，第二项为溶质所引起的凝固点的变化，第三项为界面曲率所引起的凝固点的改变，$r_1,r_2$为界面上给定点的主曲率半径，$\Gamma=\sigma/L$，$\sigma$为界面的比表面自由能，$L$为单位体积的熔化潜热，通常人们称$T_0\Gamma$为Gibbs-Thomson系数。
+
+\qquad 由式(2.37)可知，当界面为平坦面时，$k=\dfrac{1}{r_1}+\dfrac{1}{r_2}=0$时，该式即简化为式(2.36)。
+\end{enumerate}
