cp02/sc03_02.tex: 手工录入(1)

--- a/vol1/cp02/sc03_02.tex
+++ b/vol1/cp02/sc03_02.tex
@@ -1,1 +1,17 @@
 \subsection{生长界面稳定性的判据}
+生长晶体时为了使界面稳定，寻求界面稳定性的判据显然是很重要的，确定界面是否稳定，可通过界面附近熔体的温度梯度、溶液中溶\footnote{原文作“熔”。}质的浓度梯度和界面效应等途径来做出判断的。
+
+\paragraph{(1)熔体的温度梯度}晶体生长界面前沿的温度梯度，不外乎三种情况，一种是正温度梯度，即$(dT_l/dx)>0$，$x$的方向指向熔体，这样的熔体称为过热熔体。另一种情况称为负温度梯度，即$(dT_l/dx)<0$，这样的熔体称为过冷熔体。第三种情况是不常见的，即界面前沿的温度为熔体熔点温度，这时$\dfrac{dT_l}{dx}=0$。
+
+对于过热熔体，如果平坦界面在偶然的外界因素干扰下而出现了凹凸不平，但由于离开界面的熔体温度梯度为正值，界面的凸起部位必然处于较高的温度$T_l$。由于$T_l>T_0$（$T_0$为熔体的凝固点温度），在这种情况下，界面凸起部分的生长速率便会逐渐降低，从而被界面凹入部位的生长所追及，最后生长界面必然恢复到原来的光滑面的状态，因此这种类型的界面是稳定的，这样，熔体中的正温度梯度是有利于界面稳定性的因素，并可作为生长界面稳定性的判据。根据界面上能量（热）守恒原则
+$$\kappa_s\frac{\partial T_s}{\partial x}=\kappa_l\frac{\partial T_l}{\partial x}+f\rho L$$
+由于$\dfrac{\partial T_l}{\partial x}>0$，可用生长速率$f$的大小来作为界面稳定性的判据
+\begin{equation}
+f<\frac{\kappa_s}{L\rho}\frac{\partial T_s}{\partial x},
+\end{equation}
+式中$\rho$为晶体密度，$L$为结晶潜热。
+
+对于过冷的熔体，熔体中的温度梯度为负值，即$(\partial T_l/\partial x)<0$，这时熔体中的温度$T_l$低于熔点温度$T_0$，在这种情况下，有利于平坦界面受外界因素干扰而产生的凸起部位的生长，这种类型的界面显然是不稳定的，因此熔体中的负温度梯度是不利于界面稳定性的因素。
+
+当熔体中的温度等于熔点温度时，即$(\partial T_l/\partial x)=0$，整个熔体温度时均匀分布，在这种情况下，平坦界面是否稳定，那就要看平坦界面所受外界干扰大小而定，当干扰大时，平坦界面也能变为不稳定的。
+
