cp02/sc03_02.tex: 手工录入(2)

--- a/vol1/cp02/sc03_02.tex
+++ b/vol1/cp02/sc03_02.tex
@@ -15,3 +15,38 @@ f<\frac{\kappa_s}{L\rho}\frac{\partial T_s}{\partial x},
 
 当熔体中的温度等于熔点温度时，即$(\partial T_l/\partial x)=0$，整个熔体温度时均匀分布，在这种情况下，平坦界面是否稳定，那就要看平坦界面所受外界干扰大小而定，当干扰大时，平坦界面也能变为不稳定的。
 
+\paragraph{(2)溶质浓度梯度}如前所述，当界面前沿的熔体为正温度梯度，即$(\partial T_l/\partial x)>0$时，界面稳定，但这只限于对纯熔体而言的，而完全纯的熔体实际上是不存在的。如果考虑到溶质浓度梯度，即便是熔体的温度梯度为正值，平坦界面也有可能是不稳定的。
+
+（图2.13 界面处溶质浓度的分布）
+
+当熔体中含有平衡分凝系数$k_0<1$的溶质时，在晶体生长过程中，这些多余的溶质会在界面上不断地汇集，而形成溶质边界层$\delta_c$。当边界层愈接近界面时，其溶质浓度愈高，如图2.13所示。由于溶质在界面处浓集，致使熔体的凝固点温度降低，这时，晶体生长体系中熔体的凝固点温度分布可用下式表示：
+\begin{equation}
+T_l=T_0+mc_i\left[1+\left(\frac{1-k_0}{k_0}\right)\exp(-vx/D_l)\right],
+\end{equation}
+式中，$T_0$为纯熔体的凝固点温度，$m$为液相线斜率，$c_i$为晶体中溶质浓度，$k_0$为溶质的平衡分凝系数，$v$为晶体生长速率，$x$为界面指向熔体的运动坐标，$D_l$为溶质的扩散系数。这时在靠近界面处的熔体温度，可能发生两种不同的温度分布情况，如图2.14所示。
+
+（图2.14 界面处熔体中温度分布）
+
+在图2.14中，$T_mT_L$代表熔体的凝固点温度分布，$T_mT_A$代表实际熔体具有较大的正温度梯度线，$T_mT_B$代表实际熔体具有较小的正温度梯度线，$T_m$代表熔体的凝固点，$\delta_c$代表熔质边界层厚度。
+
+从图2.14中可看出，如果熔体具有$T_mT_B$线所代表的正温度梯度，在溶质边界层$\delta_c$内，熔体的实际温度比熔体应具有的凝固点温度低，这样在界面附近便形成了过冷区（阴影线区），在这个区域中的熔体处于过冷状态，这种过冷区不是由于熔体中的负温度梯度产生的，而是因为溶质在界面附近的熔体中浓集而引起的，故称此为组分过冷。在界面上的实际温度与熔体的凝固点温度相等，而处于平衡状态，在$\delta_c$外其余部位的熔体则处于过热状态。
+
+从图2.14中还可看出，在界面附近的过冷区内，随着$x$的增加过冷度亦增大，在这种情况下，当界面上出现的任何干扰，都会在过冷区内迅速地长大，这样一来，原来为光滑平坦界面就会变为凸凹不平的胞状的不稳定界面。如果熔体具有$T_mT_A$线所代表的较大正温度梯度时，在$T_mT_A$线上任何一点的温度都高于熔体应有的温度，因此，界面前沿均不会出现组分过冷现象，界面仍可保持稳定。
+
+根据实际的熔体正温度梯度（$T_mT_A$线和熔体的应有的平衡温度线（$T_mT_L$）在界面上相切的条件，即实际的温度梯度线同平衡温度线具有相同的斜率，便可求出熔体不产生组分过冷的临界条件。这个实际的熔体温度梯度（$G_l$）为溶质浓度曲线的斜率$dc_l/dx$与相图的液相线的斜率$m$的乘积。
+
+求解界面处一维扩散方程，即可得到溶质浓度曲线的斜率$dc_l/dx$值
+$$D_l\frac{\partial c_l}{\partial x}=(c_{l(0)}-c_s)v,$$
+\begin{equation}
+\frac{\partial c_l}{\partial x}=[c_{l(0)}-c_s]\cdot\frac{v}{D_L}.
+\end{equation}
+但是
+$$c_s=k^*c_{l(0)}=k_ec_l,$$
+所以
+$$\frac{\partial c_l}{\partial x}=c_l(l-k^*)v\frac{k_e}{k^*D_l},$$
+式中，$c_l$为熔体整体浓度，$k^*$为界面溶质分凝系数，$k_e$为有效分凝系数，$v$为晶体生长速率。因此，不产生熔体组分过冷的临界条件为
+\begin{equation}
+\frac{G_l}{v}\geq\frac{mc_l(1-k^*)k_e}{k^*D_l}.
+\end{equation}
+从式(2.41)中可看出，为了克服组分过冷，至少应当注意三种因素的影响，即荣体重的温度梯度（$G_l$）、晶体的生长速率（$v$）和溶质浓度（$c_l$）的影响，以便有利于保持界面的稳定性。
+
