cp02/sc03_02.tex: 手动完成录入
并更新贡献列表

--- a/vol1/cp02/sc03_02.tex
+++ b/vol1/cp02/sc03_02.tex
@@ -50,3 +50,12 @@ $$\frac{\partial c_l}{\partial x}=c_l(l-k^*)v\frac{k_e}{k^*D_l},$$
 \end{equation}
 从式(2.41)中可看出，为了克服组分过冷，至少应当注意三种因素的影响，即荣体重的温度梯度（$G_l$）、晶体的生长速率（$v$）和溶质浓度（$c_l$）的影响，以便有利于保持界面的稳定性。
 
+\paragraph{(3)界面能效应}当晶体生长时，如果界面的位移面积发生变化，则相应的界面能也要发生变化。当界面为平坦面时，在偶然因素干扰下会产生凸起，这样便增加了界面的面积，从而使界面的总界面能增大，由于界面能的增加就提高了体系的自由能，但体系的自由能总是向减少的方向进行，而使界面面积趋于缩小，这将使平坦面所产生的凸起趋于消失。因此，界面能对界面稳定性是有贡献的。
+
+当界面两侧的固相压强$P_s$与液相压强$P_l$不等时，如$P_s\neq P_l$时便存在着液面的压力差
+\begin{equation}
+\delta_p=P_s-P_l.
+\end{equation}
+如果$P_s>P_l$，$\delta_p$为正值，这样界面的曲率半径$r$的中心在晶体内，界面凸向熔体。当界面为平坦面时，这时$P_s=P_l$，$\delta_p=0$，这样便没有附加的界面压力，较为稳定。如果$P_s<P_l$，$\delta_p$为负值，那么界面的曲率半径$r$的中心在熔体内，而界面凸向晶体，这是一般所不希望的。出现界面压差$\delta_p$的原因，主要来自于界面为曲面时的平衡参量与界面为平坦面时的平衡参量之间的差异。界面效应如图2.15所示。
+
+（图2.15 界面效应）
