--- a/common/packages.tex
+++ b/common/packages.tex
@@ -6,5 +6,5 @@
 \usepackage{subfigure}
 \usepackage{enumerate}
 \usepackage{booktabs}
-\setCJKmainfont[BoldFont={方正黑体简体}, ItalicFont={方正报宋_GBK}] {方正书宋_GBK}
+\setCJKmainfont[BoldFont={方正黑体_GBK}, ItalicFont={方正报宋_GBK}] {方正书宋_GBK}
 \newfontinstance{\timesnewroman}{Times New Roman} %解决俄文字体问题
