common/macros.tex & packages.tex: 语义微调

--- a/common/macros.tex
+++ b/common/macros.tex
@@ -2,3 +2,5 @@
 \newcommand{\authors}[1]{\begin{center}\tt #1\end{center}\par}
 % 单元格内换行
 \newcommand{\tabincell}[2]{\begin{tabular}{@{}#1@{}}#2\end{tabular}}
+% 解决俄文字体问题
+\newfontinstance{\timesnewroman}{Times New Roman}
