cp02/sc01_05.tex: 手工录入至(1)

--- a/vol1/cp02/sc01_05.tex
+++ b/vol1/cp02/sc01_05.tex
@@ -1,1 +1,14 @@
 \subsection{环境相对晶体形态影响}
+同一品种的晶体，由于晶体生长环境相的不同，往往会出现不同的晶体形态。现以自由生长体系为例来说明生长条件不同对晶体生长形态的影响。
+
+\paragraph{(1)溶剂的影响}在过去漫长的年代里，人们对晶体形态的研究，大多花在矿物晶体和人工无机化合物晶体上，近20多年来，由于对有机非线性光学晶体的研究受到了重视，从而也开始注意到对有机晶体的生长形态的研究。现仅以{\CJKsetecglue{} 3-甲基-4-硝基吡啶-1-氧}晶体，（简称POM晶体），为例来说明溶剂对晶体形态的影响。
+
+溶液法是研制块状有机非线性光学晶体的主要方法之一。与无机晶体水溶液生长不同之点是，有机晶体可选择多种不同有机非水溶剂。溶液中溶质与溶剂之间的相互作用对晶体生长过程有着极为重要的影响，因此，可从分子水平的晶体微观结构来研究{\CJKsetecglue{}溶质-溶剂}间的相互作用，研究晶体生长的基元化过程与晶体生长的脱溶剂化过程，进而研究晶体的生长机制与生长动力学规律，这些研究对有机晶体生长理论的发展和实际应用均有重要意义。
+
+POM晶体时硝基吡啶类有机分子晶体，它比其他芳香硝基化合物的紫外截止波长更短，并具有较大的倍频系数，是研制非线性光学器件的候选材料。POM可溶于水、乙醇、甲苯、苯、丙酮、乙腈、环己酮、二甲基甲酰胺、二甲亚砜等溶剂中，因此，要想生长出优质大尺寸的POM晶体，优选最佳化的溶剂是一个很重要的生长条件。
+
+溶质与溶剂间相互作用不仅影响溶液的溶解度，而且对晶体的生长形态会产生很大的影响。从环己酮、二甲基甲酰胺和二甲亚砜三种不同溶剂中生长出来的POM，其晶体形态如图2.6所示。
+
+（图2.6）
+
+从图2.6中可看出，POM晶体的生长形态主要是由$\{100\},\{210\},\{302\}$等单形所组成。之所以能出现不同的生长形态，可能是由于溶剂分子与某一晶面上溶质分子具有较强的选择吸附作用，难于脱溶剂化，从而降低了该晶面的生长速率，其结果便引起了晶体生长形态的变化。
