cp02/sc03_03.tex: 手工完成录入

--- a/vol1/cp02/sc03_03.tex
+++ b/vol1/cp02/sc03_03.tex
@@ -1,1 +1,30 @@
 \subsection{界面稳定性动力学理论}
+早在1964年，Mullins和Sekerka运用干扰技术检验了球形界面和平坦界面的稳定性，从而奠定了界面稳定性理论的基础。几十年来，界面稳定性动力学理论一直是一个重要的研究领域。
+
+检验界面稳定性的干扰技术，其基本思想如下：由扩散方程求得的运动界面的运动方程，叠加一个微小的形态干扰函数，这样就得到了受干扰后的运动界面方程。人们可根据干扰后的界面满足于扩散方程这一点来确定形态干扰函数。如果形态干扰函数的振幅确实随时间而变化，那么原来的界面就是不稳定的，否则就是稳定的，这就是检验界面稳定性的所谓干扰技术。
+
+晶体生长过程中，移动的界面上不可避免的会出现干扰，界面上一旦出现几何干扰，也必然在界面附近引起局部温度场和浓度场的变化，这些可相应地理解为温度干扰和浓度干扰。干扰技术的实质在于研究热量或质量在扩散场中的干扰行为，即研究干扰振幅与时间的依赖关系。界面上出现的任何周期性干扰都可用正弦函数的傅里叶级数来表示，因此，我们应该考虑到所有可能波长的正弦干扰行为。例如在强制生长体系中，当界面未受到干扰时，它恒为等速运动的平面，在运动坐标系中，其界面方程为$Z\equiv 0$。当受到正弦式的几何干扰后，界面干扰形状可用下式表示：
+\begin{equation}
+Z(x,t)=\phi(x,t)=\delta(t)\sin(\omega x),
+\end{equation}
+式中$\delta(t)$为微干扰的振幅，$\omega$为微干扰的空间频率，$\lambda=\frac{2\pi}{\omega}$为微干扰的波长。通常，经过较长的时间后，微干扰振幅$\delta(t)$与时间的关系可表示为指数关系，即
+\begin{equation}
+\delta(t)\sim\text{常数}\cdot\exp(pt),
+\end{equation}
+于是有
+\begin{equation}
+p=\lim\frac{d\delta(t)}{dt}\cdot\frac{1}{\delta(t)}=\frac{\dot{\delta}}{\delta}
+\end{equation}
+式中$\dot{\delta}/\delta$称为单位振幅的变化率。
+
+由式(2.44)可知，在界面上一旦出现微干扰，而干扰取决于$p$值，当$p$为正值时，$\delta(t)$便随时间而增大，界面是不稳定的；但当$p$为负值时，$\delta(t)$随时间而减弱，界面是稳定的。从式(2.45)中可以看出，$p$值的大小决定了$\delta(t)$的增长或衰减的速率。作为界面稳定性的判据是微干扰随时间而变化。如果$\dfrac{d\delta(t)}{dt}<0$，则界面是稳定的，如果$\dfrac{d\delta(t)}{dt}>0$，则界面是不稳定的，其相应地图形如图2.16所示。
+
+（图2.16 界面受微干扰后的变化情况）
+
+为了研究界面的稳定性，关键在于研究扩散场中所有波长的干扰振幅与时间的关系。干扰本身的行为受到扩散场的支配，因而，干扰后的温度场和浓度场必然满足与时间相关的扩散方程式。在充分长的时间后，温度干扰和浓度干扰振幅与时间的关系，与几何干扰所得的结论一样，界面是否是稳定的，主要取决于单位振幅的变率（$\dot{\delta}/\delta$）。
+
+上述所谈的微干扰界面稳定性理论描述了一具有任意波长的无限小干扰的界面增长和衰减，这对了解界面是否稳定是十分方便的。在一组给定的生长条件下，利用上述理论便可得到干扰增长或衰减的指数速率。这组给定的生长条件包括未受干扰界面的温度梯度、浓度梯度、热扩散率、溶质扩散率、潜热、宏观生长速率、界面能等。因此，这一线性动力学理论使人们对晶体生长过程的认识大大地深刻多了。
+
+在晶体生长过程中，微干扰出现以后，界面邢台的变化远比干扰出现时的形态变化更为复杂，例如胞状界面的出现、枝蔓晶体生长是不能用线性动力学来描述的，而有待于用非线性界面动力学予以解释。
+
+保持界面的稳定性，对生长优质、完整的晶体至关重要。晶体生长的实验证明，通常导致界面不稳定的因素主要是以下几个方面：(1)过小的温度梯度；(2)太快的生长速率；(3)太多的溶质（对熔体生长而言）或太多的溶剂（对溶液生长而言）。欲促使界面稳定，其补救的方法如下：可利用较大的温度梯度、较慢的生长速率、较小的溶质浓度（对熔体生长而言）或较浓的溶液来生长晶体，并要综合各种影响因素加以处理。
